
AC_INIT([c-patterns], [1.0], [markmontymark@yahoo.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/Creational/Makefile src/Creational/Singleton/Makefile])
AC_CONFIG_SRCDIR([src/Creational/Singleton/singlespoon.c])
AC_OUTPUT
