
AC_INIT([c-patterns],[1.0],[markmontymark@yahoo.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/common/Makefile src/Creational/Makefile src/Creational/Singleton/Makefile src/Creational/Abstract_Factory/Makefile src/Creational/Prototype/Makefile])
AC_CONFIG_SRCDIR([src/Creational/Singleton/singlespoon.c])
AC_OUTPUT
