
AC_INIT([c-patterns],[1.0],[markmontymark@yahoo.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AM_PROG_AS
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile \
vendor/Makefile \
vendor/cii20/Makefile \
vendor/cii20/src/Makefile \
src/Makefile \
src/common/Makefile \
src/Creational/Makefile \
src/Structural/Makefile \
src/Behavioral/Makefile \
src/Creational/Singleton/Makefile \
src/Creational/Abstract_Factory/Makefile \
src/Creational/Prototype/Makefile \
src/Creational/Builder/Makefile \
src/Creational/Factory_Method/Makefile \
src/Structural/Proxy/Makefile \
src/Structural/Decorator/Makefile \
src/Structural/Adapter/Makefile \
src/Structural/Flyweight/Makefile \
src/Structural/Facade/Makefile \
src/Structural/Bridge/Makefile \
src/Behavioral/State/Makefile \
src/Behavioral/Strategy/Makefile \
src/Behavioral/Command/Makefile \
src/Behavioral/Visitor/Makefile \
src/Behavioral/Observer/Makefile \
src/Behavioral/Chain_Of_Responsibility/Makefile \
src/Behavioral/Iterator/Makefile \
src/Behavioral/Mediator/Makefile \
])
AC_CONFIG_SRCDIR([src/Creational/Singleton/singlespoon.c])
AC_OUTPUT
