noinst_LTLIBRARIES = libcommon.la
libcommon_la_LIBADD = ../../vendor/cii20/src/libcii.la
libcommon_la_SOURCES = arraylist_string.c arraylist_string.h soup.c soup.h tofusoup.c tofusoup.h bostonclamchowder.c bostonclamchowder.h bostonfishchowder.c bostonfishchowder.h chickensoup.c chickensoup.h clamchowder.c clamchowder.h fishchowder.c fishchowder.h honoluluclamchowder.c honoluluclamchowder.h honolulufishchowder.c honolulufishchowder.h minnestrone.c minnestrone.h pastafazul.c pastafazul.h tofusoup.c tofusoup.h vegetablesoup.c vegetablesoup.h soupbuffet.c soupbuffet.h common_str.c common_str.h
