bin_PROGRAMS = test
test_SOURCES =   \
AbstractTitleInfo.c \
AbstractTitleInfo.h \
BookInfo.c \
BookInfo.h \
DvdInfo.c \
DvdInfo.h \
GameInfo.c \
GameInfo.h \
TitleBlurbVisitor.c \
TitleBlurbVisitor.h \
TitleLongBlurbVisitor.c \
TitleLongBlurbVisitor.h \
TitleShortBlurbVisitor.c \
TitleShortBlurbVisitor.h \
test.c
test_LDADD = ../../common/libcommon.la
