bin_PROGRAMS = test
test_SOURCES =  \
DvdExpression.c \
DvdExpression.h \
DvdActorExpression.c \
DvdActorExpression.h \
DvdActorTitleExpression.c \
DvdActorTitleExpression.h \
DvdInterpreterClient.c \
DvdInterpreterClient.h \
DvdInterpreterContext.c \
DvdInterpreterContext.h \
DvdTitleActorExpression.c \
DvdTitleActorExpression.h \
DvdTitleExpression.c \
DvdTitleExpression.h \
TitleAndActor.c \
TitleAndActor.h \
test.c
test_LDADD = ../../common/libcommon.la

